# claudeboard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/: ralph-loop.local.md
.claude/harness/: CLAUDE.md  state.json
.github/workflows/: build.yml  claude.yml  release.yml
src/: agent.rs  cli.rs  colors.rs  jsonl.rs  main.rs  models.rs  pane_capture.rs  pricing.rs  refresh.rs  session_match.rs  terminal.rs  tmux.rs  ui.rs  usage.rs  utils.rs
