[package]
name = "claude-watch"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A TUI for watching Claude Code sessions"
repository = "https://github.com/tuannvm/claude-watch"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
regex-lite = "0.1"
